# ArenaSDK

./: Arena_SDK_ARM64.conf  CMakeLists.txt  README  README.md  README_ARM64
ffmpeg/: libavdevice.so.58  libavdevice.so.58.3.100  libavfilter.so.7  libavfilter.so.7.16.100  libavformat.so.58  libavutil.so.56  libpostproc.so.55.1.100  libswresample.so.3.1.100  libswscale.so.5.1.100
lib/: libarena.so.0  libarena.so.0.1.18  libarena.so.0.1.2  libarena.so.0.1.4  libarenac.so.0  libarenac.so.0.1.17  libarenac.so.0.1.2  libarenac.so.0.1.4  libarenacd.so.0  libarenacd.so.0.1.17  libarenacd.so.0.1.18  libarenacd.so.0.1.2  libarenacd.so.0.1.4  libarenad.so.0  libgentl.so.0  libgentl.so.0.1.18  libgentl.so.0.1.2  libgentl.so.0.1.4  libgentld.so.0  libsave.so.0  libsavec.so.0.1.17  libsavec.so.0.1.18  libsavec.so.0.1.2  libsavec.so.0.1.4  libsavecd.so.0  libsavecd.so.0.1.17  libsavecd.so.0.1.18  libsavecd.so.0.1.2  libsavecd.so.0.1.4  libsaved.so.0
lib64/: libarenac.so.0  libarenac.so.0.1.22  libarenacd.so.0.1.22  libarenad.so.0  libsave.so.0  libsavec.so.0  libsavec.so.0.1.22  libsavecd.so.0  libsavecd.so.0.1.22
precompiledExamples/: C_Acquisition_RapidAcquisition  C_Callback_ImageCallbacks  C_Callback_MultithreadedImageCallbacks  C_Callback_OnEvent  C_ChunkData_CRCValidation  C_Enumeration  C_ForceIp  C_Record  C_Save  C_Streamables  C_Trigger_OverlappingTrigger  Cpp_Acquisition  Cpp_Callback_MultithreadedImageCallbacks  Cpp_Callback_OnEvent  Cpp_Callback_OnNodeChange  Cpp_Callback_Polling  Cpp_ChunkData  Cpp_ChunkData_CRCValidation  Cpp_Enumeration  Cpp_Explore_NodeTypes  (+9 more)
(+333 files in other folders)
